AuthController sınıfındaki endpointler için swagger yetklinedirmesi yaparken security özelliği unutulmuş, eklendi.
